<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
     <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1000"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_max"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/tab_icon_new"
            android:checked="true"
            android:text="@string/main_tab_max" />

        <RadioButton
            android:id="@+id/rb_news"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/tab_icon_tweet"
            android:text="@string/main_tab_news" />
        <RadioButton
            android:id="@+id/rb_explore"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/tab_icon_explore"
            android:text="@string/main_tab_explore" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/tab_icon_me"
            android:text="@string/main_tab_me" />
    </RadioGroup>

</LinearLayout>