<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_height"
        android:layout_margin="@dimen/space_10"
        >
        <EditText
            android:id="@+id/ed_dialog_editcontent"
            android:hint="@string/edit_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_dialog_buttom_left"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_dialog_check"
            android:layout_gravity="center_horizontal|center_vertical"
            android:button="@drawable/radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toRightOf="@+id/cb_dialog_check"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/sharetoweibo"
            android:layout_marginLeft="@dimen/space_5"
            android:textSize="@dimen/text_size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_dialog_buttom_right"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="@dimen/space_10"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_dialog_textcount"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="70"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_toRightOf="@+id/tv_dialog_textcount"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/send"
                android:id="@+id/tv_dialog_comfirm_to_send"
                android:background="@color/transportBlack"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:textSize="@dimen/text_size_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>